--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-swipeable": "^7.0.2",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
